fix: Don't allow sidebar shrinking, use scrolling for doc overflow
Thanks to Turtleb01 for this bug report

--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -4,6 +4,7 @@
     padding: 3rem;
     font: 17px "Times New Roman";   
     line-height: 1.3;
+    overflow-x: scroll;
     word-break: break-all;
 }
 
