--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,6 +13,7 @@ body {
 .document {
     flex: 1;
     padding: 0;
+    overflow-x: scroll;
 }
 
 .document .head {
